<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MKM unofficial client</string>
    <string name="app_version">1.6</string>
    <string name="app_code">106</string>
    <string name="settings">Settings</string>
    <string name="my_wants">My wants</string>
    <string name="my_purchases">My purchases</string>
    <string name="my_cart">My cart</string>
    <string name="my_sales">My sales</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="buscar">Search</string>
    <string name="search_card">Search card</string>
    <string name="buscador">Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_items_found">No items found</string>
    <string name="search_activity">Search card</string>
    <string name="select_expansion_activity">Expansions</string>
    <string name="article_list_activity">Articles</string>
    <string name="name_of_card">Card name</string>
    <string name="name_of_game">Game</string>
    <string name="no">No</string>
    <string name="about">About</string>
    <string name="created_by">Created by</string>
    <string name="version">Version</string>
    <string name="accept">Accept</string>
    <string name="operation_ok">Operation succesfully</string>
    <string name="save_data_ok">Your preferences was saved</string>
    <string name="special_thanks">Special thanks to my wife Raquel Alguacil and 
        my friend Lander Ortuzar</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="security_question">Security question</string>

    <!-- Articles-->
    <string name="sell_price">Last sell price:</string>
    <string name="Average_price">Average price:</string>
    <string name="low_price">Minium price:</string>
    <string name="price">Price:</string>
    <string name="available">Avail.:</string>
    <string name="loading">Loading...</string>
    <string name="legend">Legend</string>
    
    <!-- Filter-->
    <string name="filter_title">Filter</string>
    <string name="foil_question">Foil?</string>
    <string name="signed_question">Signed?</string>
    <string name="altered_question">Altered?</string>
    <string name="filter">Filter</string>
    <string name="reset_filter">Reset filter</string>
    <string name="condition_card">Condition card</string>
    <string name="condition_card_field">Condition card:</string>
    <string name="language_card">Language card</string>
    <string name="language_card_field">Language card:</string>
    <string name="minium_amount">Minimum amount</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="others">Others</string>

    <!-- Errors -->
    <string name="error_no_name_card">You must specify the name of the card</string>
    <string name="error_no_name_card_title">Error: name of the card</string>
    <string name="error_password_not_match">Passwords must be equals</string>
    <string name="error_no_password">For your security, you have to put a password</string>
    <string name="error_wrong_password">Error: Wrong password</string>
    <string name="error_identification_not_correct">Error: Your apikey and/or your username are wrong</string>
    <string name="error_no_internet">Error: You must have Internet connection for this operation</string>
    <string name="error">Error</string>
    
    <!-- Legend -->
    <string name="legend_title">Legend</string>
    <string name="mint">Mint</string>
    <string name="near_mint">Near Mint</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="light_played">Light Played</string>
    <string name="played">Played</string>
    <string name="poor">Poor</string>
    <string name="foil">Foil</string>
    <string name="signed">Signed</string>
    <string name="altered">Altered</string>
    <string name="only_playset">Only playset</string>
    <string name="seller">Seller</string>
    <string name="new_seller">New</string>
    <string name="average_seller">Average</string>
    <string name="good_seller">Good</string>
    <string name="very_good_seller">Very good</string>
    <string name="outstanding_seller">Outstanding</string>
    
    <!-- Article detail -->
    <string name="article_detail_title">Article detail</string>
    <string name="comments">Comments:</string>
    <string name="user_name">Username:</string>
    <string name="country">Country:</string>
    <string name="reputation">Reputation:</string>
    <string name="profesional_question">Profesional?</string>
    <string name="only_playset_label">Only playset?</string>
    <string name="condition_mint">Mint</string>
    <string name="condition_near_mint">Near Mint</string>
    <string name="condition_excellet">Excellet</string>
    <string name="condition_good">Good</string>
    <string name="condition_light_played">Light Played</string>
    <string name="condition_played">Played</string>
    <string name="condition_poor">Poor</string>
    <string name="language_english">English</string>
    <string name="language_german">German</string>
    <string name="language_french">French</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_italian">Italian</string>
    <string name="language_russian">Russian</string>
    <string name="language_korean">Korean</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_chinese_t">Chinese simplified</string>
    <string name="country_uk">United Kingdom</string>
    <string name="country_germany">Germany</string>
    <string name="country_france">France</string>
    <string name="country_spain">Spain</string>
    <string name="country_portugal">Portugal</string>
    <string name="country_italy">Italy</string>
    <string name="country_russia">Russia</string>
    <string name="country_korea">Korea</string>
    <string name="country_japan">Japan</string>
    <string name="country_china">China</string>
    <string name="country_austria">Austria</string>
    <string name="country_switzerland">Switzerland</string>
    <string name="country_slovenia">Slovenia</string>
    <string name="country_belgium">Belgium</string>
    <string name="country_finlandia">Finlandia</string>
    <string name="country_holland">Holland</string>
    <string name="country_poland">Poland</string>
    <string name="country_txequia">Poland</string>
    <string name="country_greece">Greece</string>
    <string name="buy">Buy</string>
    <string name="how_many">How many</string>
    <string name="no_comments">-- No comments --</string>
    
    <!--  Settings -->
    <string name="api_key">API key</string>
    <string name="api_key_label">API key:</string>
    <string name="password">Password</string>
    <string name="password_label">Password:</string>
    <string name="old_password">Old assword</string>
    <string name="old_password_label">Old assword:</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_password_label">Repeat password:</string>
    <string name="confirm">Confirm</string>
    <string name="explanation_user_api">For some operations you have to specify some information about your Magic Card Market user. You can find this information on account profile of the Magic Card Market website.</string>
    <string name="explanation_password">For your security, you have to put a password which will be required for buy items and modify these preferences. This password haven\'t relation with Magic Card Market password.</string>
    
    
    <!--  Shopping cart -->
    <string name="shopping_cart">ShoppingCart</string>
    <string name="contents_label">Items:</string>
    <string name="item_value_label">Item value:</string>
    <string name="items_value_label">Items value:</string>
    <string name="shipping_method_label">Shipping method:</string>
    <string name="shipping_cost_label">Shipping cost:</string>
    <string name="shipping_label">Shipping:</string>
    <string name="total_label">Total:</string>
    <string name="seller_label">Seller:</string>
    <string name="amount_label">Amount:</string>
    <string name="checkout">Checkout</string>
    <string name="modify_article">Modify article</string>
    <string name="number_carts_label">Number of cards:</string>
    <string name="number_orders_label">Number of orders:</string>
    <string name="ask_delete_all_shoppingCarts">Are you sure about delete all shoopingcarts?</string>
    <string name="ask_delete_selected_shoppingCart">Are you sure about delete the selected shoopingcart?</string>
    
    
    <!-- Orders -->
    <string name="sellers_address_label">Sellers address:</string>
    <string name="shipping_address_label">Shipping address:</string>
    <string name="shipment_number_label">Shipment nr.:</string>
    <string name="status_label">Status:</string>
    <string name="paid_label">Paid:</string>
    <string name="bought_label">Bought:</string>
    <string name="buyer_label">Buyer:</string>
    <string name="remove">Remove</string>
    <string name="orders">Orders</string>
    <string name="order_detail">Order detail</string>
    <string name="bought_date_label">Bought date:</string>
    <string name="paid_date_label">Paid date:</string>
    <string name="sent_date_label">Sent date:</string>
    <string name="received_date_label">Received date:</string>
    <string name="called_date_label">Cancelled date:</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="shipped">Shipped</string>
    <string name="closed">Closed</string>
    <string name="received">Received</string>
    <string name="not_received">Not received</string>
    <string name="cancelled">Cancelled</string>
    <string name="lost">Lost</string>
    <string name="confirm_shipment">Confirm shipment</string>
    <string name="request_cancellation">Request Cancellation</string>
    <string name="confirm_arrival">Confirm arrival</string>
    <string name="reason_label">Reason:</string>
    
    
    <string name="checkout_message">To confirm the order, please write your password</string>
    <string name="arrived_question">Do you want to confirm the receipt of the order?</string>

    <!-- Buttons -->
    <style name="ButtonText">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textSize">22dp</item>
	    <item name="android:textStyle">bold</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>
	
    <!-- Buttons -->
    <style name="ButtonText_Medium">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textSize">15dp</item>
	    <item name="android:textStyle">bold</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>
</resources>
