<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:BannerView="http://schemas.android.com/apk/lib/com.smaato.soma"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#efebe7"
    android:orientation="vertical"
    tools:context="com.MKMAndroid.app.MainActivity.CercadorSimpleFragment" >

   <!--<RelativeLayout 
		android:layout_width="fill_parent"
		android:layout_height="50dp"
		android:id="@+id/main_relative_layout">
		<com.smaato.soma.BannerView
			android:id="@+id/banner_main"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			BannerView:loadNewBanner="true" />
	</RelativeLayout>-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewShippingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explanation_user_api"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textNumArticlesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:lines="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/api_key"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/editTextApiKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:autoText="false"
                android:gravity="center_vertical"
                android:inputType="text"
                android:lines="1"
                android:maxLength="34"
                android:maxLines="2"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/explanation_password"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewDrawerSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:lines="1" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" >

            <TextView
                android:id="@+id/textVendorTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_password"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextPasswordConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:lines="1" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonConfimSettings"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_orange"
            android:text="@string/confirm" />
            
    </LinearLayout>

</LinearLayout>
